# milt

./: CMakeLists.txt  Makefile  README.md  defaults.cpp  imgui.ini  main  main.cpp  math_base.hpp  milt_tests.cpp  render_types.hpp  rendercontext.hpp  settings.h  settings.hpp  shaders.h
ext/: camera.h  shader.h
ext/imgui/: imgui_user.h
include/: algorithm.hpp  gl_version.h  internal_settings.hpp  math_base.hpp  milt.h  milt_macro.h  milt_tests.h  neighbours.h  node.h  octree.h  ray.h  render_types.hpp  rendercontext.hpp  sample_scene.h  scene.h  settings.hpp
shaders/: node.frag  node.vert
